deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kickstarter-frontend
  namespace: kickstarter
  labels:
    service: kickstarter-frontend
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: kickstarter-frontend
